--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://sashakote123.github.io/simpleone-react/",
   "name": "simpleone-react",
   "version": "0.1.0",
   "private": true,
